--- a/index.html
+++ b/index.html
@@ -2,81 +2,185 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Prince Julius P. Avila | Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>7OOP Projects | Prince Julius P. Avila</title>
+
   <style>
     body {
-      font-family: Arial, sans-serif;
-      max-width: 900px;
+      font-family: Arial, Helvetica, sans-serif;
+      max-width: 950px;
       margin: auto;
       padding: 20px;
       line-height: 1.6;
+      background-color: #ffffff;
+      color: #222;
     }
-    img {
-      border-radius: 50%;
-      float: left;
-      margin-right: 15px;
-    }
+
     h1, h2, h3 {
       color: #2c3e50;
     }
+
+    img {
+      border-radius: 50%;
+      margin-right: 15px;
+      float: left;
+    }
+
+    a {
+      color: #1a73e8;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
     ul {
-      list-style: none;
+      list-style-type: none;
       padding-left: 0;
     }
-    li::before {
-      content: "📄 ";
+
+    li {
+      margin-bottom: 6px;
     }
-    a {
-      color: #2980b9;
-      text-decoration: none;
+
+    .clear {
+      clear: both;
+    }
+
+    .missing {
+      color: #999;
+      font-style: italic;
+    }
+
+    footer {
+      margin-top: 40px;
+      font-style: italic;
+      text-align: center;
+      color: #555;
     }
   </style>
 </head>
+
 <body>
 
-<h1>Prince Julius P. Avila</h1>
+  <h1>🌐 7OOP Projects</h1>
 
-<img src="AVILA.JPG" width="130" alt="Profile Picture"/>
+  <h2>🏠 GitHub Page</h2>
+  <p>
+    <a href="https://pavila24-0509.github.io/7OOP-Projects/" target="_blank">
+      Click Here
+    </a>
+  </p>
 
-<p><b>2nd Year BS Computer Science Student</b><br>
-City College of Angeles</p>
+  <hr>
 
-<br clear="left"/>
+  <h2>📖 About Me</h2>
 
-<h2>About Me</h2>
-<p>
-Fast and visual learner who enjoys reading, coffee, music, gaming, and singing.
-My goal is simple — to live a happy and fulfilling life while continuously learning.
-</p>
+  <img src="AVILA.JPG" alt="My Picture" width="130">
 
-<h2>Programming Languages</h2>
-<ul>
-  <li>C</li>
-  <li>Python</li>
-  <li>Java</li>
-  <li>MySQL</li>
-</ul>
+  <p>
+    👋 Hello, I'm <b>Prince Julius P. Avila</b><br>
+    🎓 A 2nd Year Computer Science Student at
+    <a href="https://www.facebook.com/CityCollegeOfAngeles" target="_blank">
+      City College of Angeles (CCA)
+    </a>
+  </p>
 
-<h2>Midterm Projects</h2>
-<ul>
-  <li><a href="Projects/Midterm Task 1.pdf">Midterm Task 1</a></li>
-  <li><a href="Projects/Midterm Task 2.pdf">Midterm Task 2</a></li>
-  <li><a href="Projects/Midterm Task 3.pdf">Midterm Task 3</a></li>
-</ul>
+  <div class="clear"></div>
 
-<h2>Finals Projects</h2>
-<ul>
-  <li><a href="Projects/Prince Julius Avila - Finals Lab Task 1. Encapsulation.pdf">Encapsulation</a></li>
-  <li>Finals Lab Task 4 – Designing Tkinter GUI using OOP (Missing)</li>
-  <li>Finals Lab Task 5 – Tkinter Window and Events (Missing)</li>
-</ul>
+  <hr>
 
-<h2>Contact</h2>
-<p>
-📧 pavila24-0509@cca.edu.ph<br>
-👍 <a href="https://www.facebook.com/PrinceAvila">Facebook</a>
-</p>
+  <h2>🌟 About Myself</h2>
+  <ul>
+    <li>⚡ Fast and visual learner</li>
+    <li>☕ Fond of reading and coffee</li>
+    <li>💭 My goal is simple — to live a happy and fulfilling life</li>
+    <li>🎮 I enjoy playing video games, listening to music, and singing</li>
+    <li>📚 I love learning through hands-on and visual experiences</li>
+  </ul>
+
+  <hr>
+
+  <h2>💻 Programming Languages I Know</h2>
+  <ul>
+    <li>🖥️ C</li>
+    <li>🐍 Python</li>
+    <li>☕ Java</li>
+    <li>💾 MySQL</li>
+  </ul>
+
+  <hr>
+
+  <h2>📝 Midterm Tasks</h2>
+  <p>All midterm activities and outputs are listed below.</p>
+
+  <h3>📚 Midterm Projects</h3>
+  <ul>
+    <li><a href="./Projects/Midterms%20Paired%20Task%201.pdf">Midterms Paired Task 1</a></li>
+    <li><a href="./Projects/Midterm%20Task%201.pdf">Midterm Task 1</a></li>
+    <li><a href="./Projects/Midterm%20Task%202.pdf">Midterm Task 2</a></li>
+    <li><a href="./Projects/Midterm%20Task%203.pdf">Midterm Task 3</a></li>
+    <li><a href="./Projects/Midterm%20Task%204.pdf">Midterm Task 4</a></li>
+    <li><a href="./Projects/Midterm%20Task%205.pdf">Midterm Task 5</a></li>
+    <li><a href="./Projects/Midterm%20Task%206.pdf">Midterm Task 6</a></li>
+  </ul>
+
+  <hr>
+
+  <h2>📘 Finals Projects</h2>
+  <ul>
+    <li>
+      <a href="./Projects/Prince%20Julius%20Avila%20-%20Finals%20Lab%20Task%201.%20Encapsulation.pdf">
+        Finals Lab Task 1 – Encapsulation
+      </a>
+    </li>
+
+    <li>
+      <a href="./Projects/Prince%20Julius%20Avila%20-%20Finals%20Task%202.%20Inheritance.pdf">
+        Finals Lab Task 2 – Inheritance
+      </a>
+    </li>
+
+    <li>
+      <a href="./Projects/Prince%20Julius%20Avila%20-%20Finals%20Task%203.%20Polymorphism%20.pdf">
+        Finals Lab Task 3 – Polymorphism
+      </a>
+    </li>
+
+    <li class="missing">
+      Finals Lab Task 4 – Designing Tkinter GUI using OOP (Missing)
+    </li>
+
+    <li class="missing">
+      Finals Lab Task 5 – Designing a Tkinter Window and Adding Events (Missing)
+    </li>
+
+    <li>
+      <a href="./Projects/Prince%20Julius%20Avila%20-%20Finals%20Lab%20Task%206.%20Mysql%20and%20Pythod%20CRUD%20using%20CLI.pdf">
+        Finals Lab Task 6 – MySQL and Python CRUD (CLI)
+      </a>
+    </li>
+
+    <li>
+      <a href="./Projects/Prince%20Julius%20Avila%20-%20Finals%20Task%207.%20Tkinter%20CRUD%20GUI.pdf">
+        Finals Lab Task 7 – Tkinter CRUD GUI (Exempted)
+      </a>
+    </li>
+  </ul>
+
+  <hr>
+
+  <h2>📫 Contact Me</h2>
+  <ul>
+    <li>📧 <a href="mailto:pavila24-0509@cca.edu.ph">pavila24-0509@cca.edu.ph</a></li>
+    <li>👍 <a href="https://www.facebook.com/PrinceAvila" target="_blank">Facebook</a></li>
+    <li>📱 Number: 09478165425</li>
+  </ul>
+
+  <footer>
+    💬 “Every day is a chance to learn something new — and have a cup of coffee while doing it.” ☕
+  </footer>
 
 </body>
 </html>
